LDADD = -lmpich -lpthread

lib_LIBRARIES   = libroomy.a
include_HEADERS =  \
    Array.h \
    BitArray.h \
    BitsArray.h \
    HashTable.h \
    ReadBuffer.h \
    RoomyArray.h \
    RoomyHashTable.h \
    RoomyList.h \
    Timer.h \
    WriteBuffer.h \
    hash.h \
    knudirs.h \
    knusort.h \
    knustring.h \
    params.h \
    roomy.h \
    types.h

libroomy_a_SOURCES = \
    Array.c \
    Array.h \
    BitArray.c \
    BitArray.h \
    BitsArray.c \
    BitsArray.h \
    HashTable.c \
    HashTable.h \
    ReadBuffer.c \
    ReadBuffer.h \
    RoomyArray.c \
    RoomyArray.h \
    RoomyHashTable.c \
    RoomyHashTable.h \
    RoomyList.c \
    RoomyList.h \
    Timer.c \
    Timer.h \
    WriteBuffer.c \
    WriteBuffer.h \
    hash.c \
    hash.h \
    knudirs.c \
    knudirs.h \
    knusort.c \
    knusort.h \
    knustring.c \
    knustring.h \
    params.c \
    params.h \
    roomy.c \
    roomy.h \
    types.h
  
